# sdl_webassembly_demo

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  graphics.md  graphics.txt
src/: asset.c  asset.h  bullet.c  bullet.h  engine.c  engine.h  fish.c  fish.h  glugglug.c  level.c  level.h  player.c  player.h  timer.c  timer.h  treasure.c  treasure.h  util.c  util.h
